CMAKE_MINIMUM_REQUIRED (VERSION 3.13)

SET (ProjectName "NimTetris")
PROJECT (${ProjectName})


# Common
SET (CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
SET (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE PATH "Install prefix" FORCE)

if (MSVC)
	SET (CMAKE_USE_RELATIVE_PATHS ON CACHE INTERNAL "" FORCE)
	ADD_COMPILE_OPTIONS("/Zc:__cplusplus")
endif ()

SET (CMAKE_CXX_STANDARD_REQUIRED YES) 
SET (CMAKE_CXX_STANDARD 14)
SET (CMAKE_CXX_EXTENSIONS NO)

if (DEFINED CMAKE_BUILD_TYPE)
	SET_PROPERTY (CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS ${CMAKE_CONFIGURATION_TYPES})
endif ()

MESSAGE (STATUS "Compiler ID: ${CMAKE_CXX_COMPILER_ID}")

if(ENABLE_SOLUTION_FOLDERS)
  SET_PROPERTY (GLOBAL PROPERTY USE_FOLDERS ON)
  SET_PROPERTY (GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMakeTargets")
endif()


# Project specificset
SET (NT_LANGUAGE "Korean" CACHE STRING "Select language")
SET_PROPERTY (CACHE NT_LANGUAGE PROPERTY STRINGS "Korean" "English")

ADD_DEFINITIONS (-D_CRT_SECURE_NO_WARNINGS)

INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/include/_OS/Windows")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/_OS/Windows")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/Drawable")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/_Language/Korean")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/_Language/English")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/_OS/Windows")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/Actor")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/AI")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/AI/_Machine/x64")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/src/NimTetris/AI/_Machine/x86")

if(WIN32)
	ADD_EXECUTABLE (${ProjectName} WIN32)
else() 
	MESSAGE (FATAL_ERROR "No implementation found for your OS!")
endif()

SET_PROPERTY (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${ProjectName})

ADD_SUBDIRECTORY (include)
ADD_SUBDIRECTORY (src)

SOURCE_GROUP ("include" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/include/*.*")
SOURCE_GROUP ("include/YourOS" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/include/_OS/*/*.*")
SOURCE_GROUP ("src" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/*.*")
SOURCE_GROUP ("src/YourOS" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/_OS/*/*.*")
SOURCE_GROUP ("src/Drawable" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/Drawable/*.*")
SOURCE_GROUP ("src/NimTetris" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/*.*")
SOURCE_GROUP ("src/NimTetris/YourLanguage" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/_Language/*/*.*")
SOURCE_GROUP ("src/NimTetris/YourOS" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/_OS/*/*.*")
SOURCE_GROUP ("src/NimTetris/Actor" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/Actor/*.*")
SOURCE_GROUP ("src/NimTetris/AI" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/AI/*.*")
SOURCE_GROUP ("src/NimTetris/AI/YourMachine" REGULAR_EXPRESSION "${CMAKE_CURRENT_SOURCE_DIR}/src/NimTetris/AI/_Machine/*/*.*")
SOURCE_GROUP ("Resource Files" REGULAR_EXPRESSION "rc$|ico$")